--- a/.github/workflows/sync-release-tag.yml
+++ b/.github/workflows/sync-release-tag.yml
@@ -23,7 +23,7 @@ jobs:
       - name: Add source repository remote
         run: |
           # Add the source repository URL where the release tag is generated
-          git remote add source-repo https://git.cloudmanager.adobe.com/prokarmaptrsd/providence-poc/
+          git remote add source-repo https://khushbukrishnanand-shukla-concentrix-com:3nSUzr9BU26MO1eFyvUQGm1GCjcWdiXJ9JD0OodpC9fueB4ef6h7JQQJ99BCACAAAAAFjjIdAAASAZDO3exk@git.cloudmanager.adobe.com/prokarmaptrsd/aemify/
           git fetch source-repo --tags  # Fetch all tags from the source repository
 
       # Step 4: Get the latest release tag from the source repository
