--- a/.github/workflows/sync-release-tag.yml
+++ b/.github/workflows/sync-release-tag.yml
@@ -16,8 +16,8 @@ jobs:
         # Step 2: Set up Git for pushing tags
       - name: Set up Git
         run: |
-          git config --global user.name "khushbush"
-          git config --global user.email "khushbu.k.shukla@gmail.com"
+          git config --global user.name "GitHub Actions"
+          git config --global user.email "actions@github.com"
 
       # Step 3: Add the source repository as a remote to fetch the release tag
       - name: Add source repository remote
